# OntologyAgent

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 72c3397a65e5_initial_schema.py
docs/superpowers/plans/: 2026-06-19-ontologyagent-mvp-implementation-plan.md
docs/superpowers/specs/: 2026-06-18-ontologyagent-design-CN.md  2026-06-18-ontologyagent-design.md
frontend/: index.html
skills/: place_order.md  product_query.md
src/ontology_agent/: config.py  main.py
src/ontology_agent/agent/: __init__.py  harness.py  messages.py  prompts.py
src/ontology_agent/api/: chat.py  ontology.py
src/ontology_agent/db/: __init__.py  models.py  session.py
src/ontology_agent/llm/: __init__.py  client.py
src/ontology_agent/ontology/: __init__.py  instance.py  storage.py  types.py
src/ontology_agent/skills/: __init__.py  loader.py
src/ontology_agent/tools/: __init__.py  base.py  entity_search.py  entity_write.py  ontology_read.py  ontology_write.py  registry.py
tests/: conftest.py  test_agent.py  test_api.py  test_db.py  test_entity_tools.py  test_integration.py  test_llm_client.py  test_ontology.py  test_ontology_tools.py  test_skills.py  test_tools.py
